@@ -39,3 +39,5 @@ SOCKS_PORT = 1080
 SOCKS_USER = 
 THREADS = 1
 URL = /satellite_proxy/satellite_proxy.php
+REQUESTS_LOG = requests.log
+
